[package]
name = "tik-dfpwm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json", "cookies"] }
tokio = { version = "1.26.0", features = ["full"] }
dotenv_codegen = "0.15.0"
base64 = "0.21.0"
axum = { version = "0.6.18", features = [] }
anyhow = "1.0.71"