[package]
name = "tik-dfpwm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.17", features = ["json", "cookies"] }
serde = { version = "1.0.156", features = ["derive"] }
axum = { version = "0.6.18", features = ["headers"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tokio-stream = { version = "0.1.14"}
tokio = { version = "1.26.0", features = ["full"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
anyhow = "1.0.71"
base64 = "0.21.0"
log = "0.4.19"